# card_game_rust

./: .gitignore  Cargo.toml  README.md
src/: ReceiveStructure.json  SendStructure.json  main.rs
src/game/: actions.rs  card.rs  event.rs  logic.rs  mod.rs  players.rs
src/game_assets/: index.html
src/game_assets/assets/: app.js  styles.css  ws_test.js
src/network/: Messages.rs  game_route.rs  mod.rs  server.rs  web_socket_handler.rs
test/: ws_test.js
