[package]
name = "Card_Game_Project"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = { version = "0.7", features = ["ws", "json"] }

tower-http = { version = "0.5", features = ["fs"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rand = "0.9.2"
futures-util = "0.3.31"
